[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-samplers"
version = "0.1.0"
description = "Custom samplers and schedulers for ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name="azazeal04" }
]

dependencies = [
  "torch>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/azazeal04/ComfyUI-HybridSamplers"
"Bug Tracker" = "https://github.com/azazeal04/ComfyUI-HybridSamplers/issues"
